# servier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  duckdb_ddl.py  duckdb_env_setup.py  pyproject.toml  question1.sql  question2.sql  requirements-dev.txt  requirements.txt  run.sh
data/corrupted_data/: pubclinical_validation_errors_2024_12_05.json
data/silver_zone/: cross_reference_data_2024_12_05.json  drugs_data_2024_12_05.json  pubclinical_data_2024_12_05.json
servier/: cli.py  config.py  main.py  models.py
servier/utils/: helpers.py  models_helper.py
tests/: conftest.py  test_helpers.py  test_main.py
