[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "servier"
version = "0.1.2"
requires-python = ">= 3.8"
dependencies = [
  "click",
  "python-dateutil",
  "pydantic",
]
authors = [
  {name = "Omar Fessi", email = "omarfessy@gmail.com"},
]
description = "A CLI to aggregate Servier sample data"
readme = "README.md"

[tool.setuptools]
packages = ["servier", "servier.utils"]

[project.scripts]
servier-aggregate = "servier:cli" 
